# Sniffy

./: .gitignore  README.md
LEO_sniffy/: CMakeLists.txt  LEO_sniffy.pro  LEO_sniffy.pro.user.d382099  LEO_sniffy_en_GB.ts  Makefile  Makefile.Debug  Makefile.Release  README.md  THIRD-PARTY-NOTICES.md  arbgen_input.txt  arbgen_input_DAC.txt  arbgen_input_dual err.txt  arbgen_input_dual.txt  arbgen_input_single err.txt  arbgen_input_single.txt  authenticator.cpp  authenticator.h  comms.cpp  comms.h  connectiontype.cpp  connectiontype.h  customdial.h  customsettings.cpp  customsettings.h  default_layout.json  device.cpp  device.cpp.autosave  device.h  device.h.autosave  devicedescriptor.cpp  devicedescriptor.h  devicemediator.cpp  devicemediator.h  devicespec.cpp  devicespec.h  diagnostics.h  firmwaremanager.cpp  firmwaremanager.h  graphics.qrc  leo_sniffy.rc  (+38 more)
LEO_sniffy/.github/workflows/: release.yml
LEO_sniffy/GUI/: clickablelabel.cpp  customcombobox.cpp  customcombobox.h  customdial.cpp  customdial.h  moduledockwidget.cpp  moduledockwidget.h  qcustomplot.cpp  qcustomplot.h  simplehprogressbar.h  simplevprogressbar.h  stylehelper.h  toastwidget.cpp  toastwidget.h  widgetbuttons.cpp  widgetbuttons.h  widgetbuttons.ui  widgetchart.cpp  widgetchart.h  widgetchart.ui  widgetcontrolmodule.cpp  widgetcontrolmodule.h  widgetcustomplot.cpp  widgetcustomplot.h  widgetcustomplot.ui  widgetdesciptionexpand.cpp  widgetdesciptionexpand.h  widgetdesciptionexpand.ui  widgetdial.cpp  widgetdial.h  widgetdial.ui  widgetdialrange.cpp  widgetdialrange.h  widgetdialrange.ui  widgetdisplay.cpp  widgetdisplay.h  widgetdisplay.ui  widgetfeature.cpp  widgetfeature.h  widgetfeature.ui  (+40 more)
LEO_sniffy/agentbridge/: README.md  agentbridge.cpp  agentbridge.h
LEO_sniffy/cmake/: leo_sniffy_version.rc.in  pch.hpp
LEO_sniffy/communication/: commands.cpp  commands.h  comms.cpp  comms.cpp.autosave  comms.h  connectiontype.h  devicescanner.cpp  devicescanner.h  serialLine.cpp  serialLine.h  serialportreader.cpp  serialportreader.h  serialportwriter.cpp  serialportwriter.h
LEO_sniffy/config/: Nucleo-C562RE.json  Nucleo-F303RE.json  Nucleo-F446RE.json  Nucleo-G474RE.json  Nucleo-L476RG.json  nucleo64_template.json
LEO_sniffy/docs/: README-cmake.md
LEO_sniffy/features/scope/: scope.cpp  scope.h  scopeconfig.cpp  scopeconfig.h  scopedefs.h  scopespec.cpp
LEO_sniffy/flasher/: stlinkconnector.cpp  stlinkconnector.h  stlinkeraser.cpp  stlinkeraser.h  stlinkflasher.cpp  stlinkflasher.h  stlinkinspector.cpp  stlinkinspector.h  stlinkwriter.cpp  stlinkwriter.h
LEO_sniffy/graphics/: abstractcolors.cpp  abstractcolors.h  abstractgraphics.cpp  abstractgraphics.h  abstracttheme.cpp  abstracttheme.h  colors.cpp  colors.h  graphics.cpp  graphics.h  styles.h
LEO_sniffy/graphics/themes/: aurora.cpp  aurora.h  dark.cpp  dark.h  darktheme.cpp  darktheme.h  dawn.cpp  dawn.h  ember.cpp  ember.h  greenfield.cpp  greenfield.h  hudcyan.cpp  hudcyan.h  light.cpp  light.h  lighttheme.cpp  lighttheme.h  msdos.cpp  msdos.h  neomorph.cpp  neomorph.h  sunset.cpp  sunset.h  tealanalytics.cpp  tealanalytics.h
LEO_sniffy/math/: movingaverage.cpp  movingaverage.h  timing.cpp  timing.h
LEO_sniffy/modules/: abstractconfiguration.cpp  abstractconfiguration.h  abstractmodule.cpp  abstractmodule.h  abstractspecification.cpp  abstractspecification.h  errorlist.cpp  errorlist.h  labelformator.cpp  labelformator.h  numberparser.cpp  numberparser.h  pinfunctioninfo.h  specutils.h
LEO_sniffy/modules/arbgenerator/: arbgenerator.cpp  arbgenerator.h  arbgeneratorconfig.cpp  arbgeneratorconfig.h  arbgeneratordefs.h  arbgeneratorfileloader.cpp  arbgeneratorfileloader.h  arbgeneratorspec.cpp  arbgeneratorspec.h  arbgeneratorwindow.cpp  arbgeneratorwindow.h  arbgeneratorwindow.ui  arbgenpanelsettings.cpp  arbgenpanelsettings.h  arbgensweepcontroller.cpp  arbgensweepcontroller.h  gencommons.cpp  gencommons.h  signalcreator.cpp  signalcreator.h
LEO_sniffy/modules/counter/: counter.cpp  counter.cpp.autosave  counter.h  counterconfig.cpp  counterconfig.h  counterdefs.h  counterspec.cpp  counterspec.h  countertabhighfreq.cpp  countertabhighfreq.h  countertabintervals.cpp  countertabintervals.h  countertablowfreq.cpp  countertablowfreq.h  countertabratio.cpp  countertabratio.h  counterwindow.cpp  counterwindow.h  counterwindow.ui  windowcounter.cpp  windowcounter.h  windowcounter.ui
LEO_sniffy/modules/device/: device.cpp  device.h  devicespec.cpp  devicespec.h  devicewindow.cpp  devicewindow.h  devicewindow.ui  pinoutfunctionmap.cpp  pinoutfunctionmap.h  pinoutwidget.cpp  pinoutwidget.h
LEO_sniffy/modules/logicanalyzer/: logicanalyzer.cpp  logicanalyzer.h  logicanalyzerconfig.cpp  logicanalyzerconfig.h  logicanalyzerspec.cpp  logicanalyzerspec.h  logicanalyzerwindow.cpp  logicanalyzerwindow.h  logicanalyzerwindow.ui
LEO_sniffy/modules/patternGenerator_/: patternGeneratorwindow.h
LEO_sniffy/modules/patterngenerator/: patternchart.h  patterngenerator.cpp  patterngenerator.h  patterngeneratorconfig.cpp  patterngeneratorconfig.h  patterngeneratordefs.h  patterngeneratorpainter.cpp  patterngeneratorpainter.h  patterngeneratorpatterns.cpp  patterngeneratorpatterns.h  patterngeneratorsettings.cpp  patterngeneratorsettings.h  patterngeneratorspec.cpp  patterngeneratorspec.h  patterngeneratorwindow.cpp  patterngeneratorwindow.h  patterngeneratorwindow.ui
LEO_sniffy/modules/pwmgenerator/: pwmgenerator.h  pwmgeneratorconfig.cpp  pwmgeneratorconfig.h  pwmgeneratorspec.cpp  pwmgeneratorspec.h  pwmgeneratorwindow.cpp  pwmgeneratorwindow.h  pwmgeneratorwindow.ui  pwngenerator.cpp
LEO_sniffy/modules/scan/: device.cpp  devicewindow.h  devicewindow.ui  scan.cpp  scan.h  windowscan.cpp  windowscan.h  windowscan.ui
LEO_sniffy/modules/scope/: fftdefs.h  fftengine.cpp  fftengine.h  mathcalculations.cpp  mathcalculations.h  meascalculations.cpp  meascalculations.h  measurement.cpp  measurement.h  paneladvanced.cpp  paneladvanced.h  panelcursors.cpp  panelcursors.h  panelmath.cpp  panelmath.h  panelsettings.h  (+19 more)
LEO_sniffy/third-party-licenses/: tinyexpr-zlib.txt
(+72 files in other folders)
