[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sniffy-mcp"
version = "0.1.0"
description = "Python MCP client & server for the Sniffy AgentBridge IPC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
sniffy-mcp = "sniffy_mcp.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sniffy_mcp*"]
